payments: success: Fix clipped button text on small screens

--- a/src/main/resources/static/style_doc.css
+++ b/src/main/resources/static/style_doc.css
@@ -50,6 +50,9 @@ a:visited {
 }
 
 .link-button {
+    /* Wrap text inside the container */
+    display: inline-block;
+
     background-color: #234baa; /* A-1 600 */
     color: #ecf0f7; /* N-1 50 */
     font-weight: bold;
